--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -106,37 +106,55 @@ main .titulomenor {
   justify-content: center;
   margin-top: 70px;
 }
-main #galeria {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  grid-template-areas: "glry1 glry2 glry3" "glry4 glry5 glry6";
-  gap: 35px;
+.boton-pagar{
+  background-color: light;
+  text-align: center;
+  transition-duration: 0.4s;
+  border-radius: 12px;
+  padding: 10px 24px;
+  right: 15px;
+  bottom: 10px;
 }
-main #galeria img {
-  width: 98%;
-  height: 90%;
-  box-shadow: 0px 0px 10px;
-  border-radius: 10px;
+.boton-pagar:hover {
+  background-color: rgb(90, 49, 129);
+  color: rgb(45, 66, 24);
+}
+#contenedor-pagina{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
-main .button {
-  margin-top: 10px;
-  margin-bottom: 20px;
-  margin-left: 50%;
-  padding: 11px;
-  border-radius: 15px;
-  border: 0.5px solid rgb(177, 88, 177);
-  background-color: transparent;
-  color: rgb(177, 88, 177);
-  cursor: pointer;
-  font-family: "Amatic SC";
-  font-size: 20px;
+.contenedor-productos{
+  margin: 15px;
+  padding: 20px 16px;
+  position: relative;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  border-radius: 10px;
 }
-main .button:hover {
-  transform: scale(1.5);
-  transition-property: all;
-  transition-duration: 1s;
+.contenedor-productos:hover {
+  
+  box-shadow: 0px 0px 10px;
+}
+
+.contenedor-productos img{
+  width: 300px;
+}
+.boton-add{
+  position: absolute;
+  background-color: rgb(214, 122, 91);
+  text-align: center;
+  transition-duration: 0.4s;
+  border-radius: 12px;
+  padding: 10px 24px;
+  border: none;
+  right: 15px;
+  bottom: 1px;
+
+}
+.boton-add:hover {
+  background-color: rgb(90, 49, 129);
+  color: white;
 }
 
 footer {
@@ -154,39 +172,3 @@ footer .footer__cont {
   padding: 10px;
 }
 
-/*Tamaño movil*/
-@media (max-width: 480px) {
-  #prodt {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-  }
-  .imgProductos img {
-    width: 100%;
-    height: 30%;
-    box-shadow: 0px 0px 10px;
-    border-radius: 10px;
-  }
-  h1 {
-    color: rgb(104, 74, 74);
-    font-size: 100px;
-    font-weight: lighter;
-  }
-  .titulomenor {
-    font-size: 60px;
-  }
-  h2 {
-    display: flex;
-    justify-content: center;
-  }
-  h3 {
-    display: flex;
-    justify-content: center;
-  }
-  img {
-    size: 1vw;
-  }
-  #piedepagina {
-    display: none;
-  }
-}
